--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,11 @@ on:
           - StandaloneWindows64
           - Android
           - iOS
+      upload_to_testflight:
+        description: 'Upload to TestFlight (iOS only)'
+        required: false
+        type: boolean
+        default: false
 
 jobs:
   build:
@@ -723,7 +728,7 @@ jobs:
       
       # iOS: Upload to TestFlight using Apple's recommended action
       - name: Upload to TestFlight
-        if: inputs.platform == 'iOS'
+        if: inputs.platform == 'iOS' && inputs.upload_to_testflight == true
         uses: apple-actions/upload-testflight-build@v1
         with:
           app-path: 'build/iOS/iOS/export/StashDemo.ipa'
@@ -744,16 +749,7 @@ jobs:
         uses: google-github-actions/auth@v3
         with:
           credentials_json: ${{ secrets.PIE_PROD_GCP_SERVICE_ACCOUNT_CREDENTIALS_FOR_UPLOAD_DEMO }}
-      
-      # Upload artifacts to Google Cloud Storage (full build directory)
-      - name: Upload build artifacts to GCS
-        uses: google-github-actions/upload-cloud-storage@v3
-        with:
-          path: build/${{ inputs.platform }}
-          destination: stash_sdk_demo/${{ inputs.platform }}/${{ github.run_number }}
-          parent: false
-          gzip: false
-      
+            
       # Upload platform-specific artifacts to latest/
       - name: Find and upload latest Android APK to GCS
         if: inputs.platform == 'Android'
@@ -773,18 +769,14 @@ jobs:
         uses: google-github-actions/upload-cloud-storage@v3
         with:
           path: ${{ env.APK_FILE }}
-          destination: stash_sdk_demo/Android/latest/StashDemo-latest.apk
-          parent: false
-          gzip: false
+          destination: stash_sdk_demo/Android/latest/
       
       - name: Upload latest iOS IPA to GCS
         if: inputs.platform == 'iOS'
         uses: google-github-actions/upload-cloud-storage@v3
         with:
           path: build/iOS/iOS/export/StashDemo.ipa
-          destination: stash_sdk_demo/iOS/latest/StashDemo-latest.ipa
-          parent: false
-          gzip: false
+          destination: stash_sdk_demo/iOS/latest/
       
       - name: Create latest build archive
         if: inputs.platform != 'Android' && inputs.platform != 'iOS'
