--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -892,105 +892,43 @@ jobs:
           cd "$XCODE_PROJECT_DIR"
           
           echo "Building for iOS simulator..."
+          echo "Building .app bundle for simulator (no simulator needed for build-only)"
           
-          # Boot a simulator if needed (GitHub Actions runners may not have simulators booted)
-          echo "Checking for available simulators..."
-          # Extract UUID (last set of parentheses, which is the device ID)
-          # Format: "iPhone 15 Pro (Shutdown) (A1B2C3D4-E5F6-7890-ABCD-EF1234567890)"
-          # Extract the last field that looks like a UUID (contains dashes and hex chars)
-          BOOTED_SIMULATOR=$(xcrun simctl list devices | grep -i "Booted" | grep -i "iPhone" | head -1 | grep -oE '\([A-F0-9-]{30,}\)' | tail -1 | tr -d '()' || echo "")
-          
-          if [ -z "$BOOTED_SIMULATOR" ]; then
-            echo "No booted simulator found, attempting to boot one..."
-            # Find an available iPhone simulator (extract UUID from the line)
-            # Try "available" devices first
-            AVAILABLE_SIMULATOR=$(xcrun simctl list devices available | grep -i "iPhone" | grep -v "unavailable" | head -1 | grep -oE '\([A-F0-9-]{30,}\)' | tail -1 | tr -d '()' || echo "")
-            
-            if [ -z "$AVAILABLE_SIMULATOR" ]; then
-              # Fallback: get any iPhone simulator (even if not explicitly "available")
-              # Look for lines with UUID pattern (has dashes and looks like a UUID)
-              AVAILABLE_SIMULATOR=$(xcrun simctl list devices | grep -i "iPhone" | grep -oE '\([A-F0-9-]{30,}\)' | tail -1 | tr -d '()' || echo "")
-            fi
-            
-            if [ -n "$AVAILABLE_SIMULATOR" ] && [ "$AVAILABLE_SIMULATOR" != "Shutdown" ] && [ "$AVAILABLE_SIMULATOR" != "Booted" ] && [ "$AVAILABLE_SIMULATOR" != "Shutting Down" ]; then
-              echo "Booting simulator: $AVAILABLE_SIMULATOR"
-              xcrun simctl boot "$AVAILABLE_SIMULATOR" 2>/dev/null || echo "Note: Simulator may already be booting or boot failed (continuing anyway)"
-              # Wait a moment for simulator to boot
-              sleep 2
-              BOOTED_SIMULATOR="$AVAILABLE_SIMULATOR"
-            else
-              echo "⚠️  No available iPhone simulator found or invalid ID extracted: '$AVAILABLE_SIMULATOR'"
-              echo "Debug: Listing all devices:"
-              xcrun simctl list devices | grep -i "iPhone" | head -5
-            fi
-          else
-            echo "Found booted simulator: $BOOTED_SIMULATOR"
-          fi
-          
-          # Try to get simulator destinations from xcodebuild
-          echo "Getting available destinations from xcodebuild..."
-          AVAILABLE_DESTINATIONS=$(xcodebuild -project Unity-iPhone.xcodeproj -scheme Unity-iPhone -showdestinations 2>/dev/null | grep -i "platform:iOS Simulator" || echo "")
-          
-          SIMULATOR_DESTINATION=""
-          if [ -n "$AVAILABLE_DESTINATIONS" ]; then
-            echo "Available simulator destinations:"
-            echo "$AVAILABLE_DESTINATIONS" | head -3
-            # Extract the first available simulator ID
-            SIMULATOR_ID=$(echo "$AVAILABLE_DESTINATIONS" | head -1 | sed -n 's/.*id=\([^,}]*\).*/\1/p' | head -1)
-            if [ -n "$SIMULATOR_ID" ]; then
-              SIMULATOR_DESTINATION="platform=iOS Simulator,id=$SIMULATOR_ID"
-              echo "Using simulator destination: $SIMULATOR_DESTINATION"
-            fi
-          fi
-          
-          # If we have a booted simulator but xcodebuild didn't show it, use it directly
-          # But only if it looks like a valid UUID (not a status string)
-          if [ -z "$SIMULATOR_DESTINATION" ] && [ -n "$BOOTED_SIMULATOR" ]; then
-            # Validate it's a UUID (contains dashes and is long enough)
-            if echo "$BOOTED_SIMULATOR" | grep -qE "^[A-F0-9-]{30,}$" && [ "$BOOTED_SIMULATOR" != "Shutdown" ] && [ "$BOOTED_SIMULATOR" != "Booted" ]; then
-              SIMULATOR_DESTINATION="platform=iOS Simulator,id=$BOOTED_SIMULATOR"
-              echo "Using booted simulator: $SIMULATOR_DESTINATION"
-            else
-              echo "⚠️  Booted simulator ID doesn't look valid: $BOOTED_SIMULATOR"
-            fi
-          fi
-          
-          # Build for simulator
-          # Use iphonesimulator SDK - this is the key for simulator builds
-          if [ -n "$SIMULATOR_DESTINATION" ]; then
-            echo "Building with destination: $SIMULATOR_DESTINATION"
-            xcodebuild build \
-              -project Unity-iPhone.xcodeproj \
-              -scheme Unity-iPhone \
-              -configuration Release \
-              -sdk iphonesimulator \
-              -destination "$SIMULATOR_DESTINATION" \
-              -derivedDataPath ./DerivedData \
-              MARKETING_VERSION="$MARKETING_VERSION" \
-              CURRENT_PROJECT_VERSION="$CURRENT_PROJECT_VERSION" \
-              INFOPLIST_KEY_CFBundleShortVersionString="$MARKETING_VERSION" \
-              INFOPLIST_KEY_CFBundleVersion="$CURRENT_PROJECT_VERSION" \
-              INFOPLIST_KEY_ITSAppUsesNonExemptEncryption="NO" \
-              CODE_SIGNING_ALLOWED="NO" \
-              CODE_SIGNING_REQUIRED="NO" \
-              ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES=NO
-          else
-            # Fallback: build without destination (SDK specification should be enough for building)
-            echo "⚠️  No simulator destination available, building with SDK-only specification..."
-            xcodebuild build \
-              -project Unity-iPhone.xcodeproj \
-              -scheme Unity-iPhone \
-              -configuration Release \
-              -sdk iphonesimulator \
-              -derivedDataPath ./DerivedData \
-              MARKETING_VERSION="$MARKETING_VERSION" \
-              CURRENT_PROJECT_VERSION="$CURRENT_PROJECT_VERSION" \
-              INFOPLIST_KEY_CFBundleShortVersionString="$MARKETING_VERSION" \
-              INFOPLIST_KEY_CFBundleVersion="$CURRENT_PROJECT_VERSION" \
-              INFOPLIST_KEY_ITSAppUsesNonExemptEncryption="NO" \
-              CODE_SIGNING_ALLOWED="NO" \
-              CODE_SIGNING_REQUIRED="NO" \
-              ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES=NO
+          # Build for simulator using SDK only (no destination needed for building)
+          # The -sdk iphonesimulator flag is sufficient to build for simulator architecture
+          # We don't need to boot or specify a simulator device - we're just building, not running
+          # Try building without destination first, fallback to generic if xcodebuild requires it
+          if ! xcodebuild build \
+            -project Unity-iPhone.xcodeproj \
+            -scheme Unity-iPhone \
+            -configuration Release \
+            -sdk iphonesimulator \
+            -derivedDataPath ./DerivedData \
+            MARKETING_VERSION="$MARKETING_VERSION" \
+            CURRENT_PROJECT_VERSION="$CURRENT_PROJECT_VERSION" \
+            INFOPLIST_KEY_CFBundleShortVersionString="$MARKETING_VERSION" \
+            INFOPLIST_KEY_CFBundleVersion="$CURRENT_PROJECT_VERSION" \
+            INFOPLIST_KEY_ITSAppUsesNonExemptEncryption="NO" \
+            CODE_SIGNING_ALLOWED="NO" \
+            CODE_SIGNING_REQUIRED="NO" \
+            ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES=NO 2>&1; then
+              echo "⚠️  Build without destination failed, trying with generic destination..."
+              # Fallback: try with generic destination (some projects require it)
+              xcodebuild build \
+                -project Unity-iPhone.xcodeproj \
+                -scheme Unity-iPhone \
+                -configuration Release \
+                -sdk iphonesimulator \
+                -destination 'generic/platform=iOS Simulator' \
+                -derivedDataPath ./DerivedData \
+                MARKETING_VERSION="$MARKETING_VERSION" \
+                CURRENT_PROJECT_VERSION="$CURRENT_PROJECT_VERSION" \
+                INFOPLIST_KEY_CFBundleShortVersionString="$MARKETING_VERSION" \
+                INFOPLIST_KEY_CFBundleVersion="$CURRENT_PROJECT_VERSION" \
+                INFOPLIST_KEY_ITSAppUsesNonExemptEncryption="NO" \
+                CODE_SIGNING_ALLOWED="NO" \
+                CODE_SIGNING_REQUIRED="NO" \
+                ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES=NO
           fi
           
           echo "✅ Simulator build completed"
